# policy_system

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: config.py
backend/admin/: access_service.py  document_service.py  user_service.py
backend/api/: main.py  providers.py  schemas.py
backend/api/routers/: admin.py  auth.py  feedback.py  query.py  validation.py
backend/auth/: dependencies.py  jwt_handler.py  password.py
backend/core/: exceptions.py  interfaces.py
backend/db/: base.py  models.py  session.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 0001_initial_schema.py
backend/feedback/: feedback_service.py  flag_service.py
backend/ingestion/: chunker.py  pipeline.py
backend/ingestion/parsers/: base.py  docx_parser.py  pdf_parser.py  text_parser.py
backend/llm/: factory.py  ollama_provider.py
backend/query/: access_filter.py  citation_builder.py  conversation_service.py  engine.py  prompts.py
backend/rag/: chromadb_provider.py  factory.py
backend/validation/: runner.py  scorer.py
frontend/: package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/components/admin/: CreateUserForm.tsx  DocumentTable.tsx  DocumentUploadForm.tsx  RoleAssignmentPanel.tsx  UserTable.tsx
frontend/src/components/chat/: ArchiveToggle.tsx  CitationBlock.tsx  CrossDomainPrompt.tsx  DomainSelector.tsx  FeedbackButtons.tsx  FormatToggle.tsx  MessageBubble.tsx  MessageThread.tsx
frontend/src/components/shared/: Navbar.tsx  QueryProvider.tsx
frontend/src/hooks/: useAuth.ts  useChat.ts  useConversations.ts  useFeedback.ts
frontend/src/lib/: api.ts
frontend/src/types/: admin.ts  api.d.ts
notebooks/: 01_db_and_auth.ipynb  02_document_ingestion_admin.ipynb  03_document_parsing.ipynb  04_rag_pipeline.ipynb  05_query_engine.ipynb  06_feedback_and_flagging.ipynb  07_validation_harness.ipynb
policy_system/admin/: access_service.py  document_service.py  user_service.py
policy_system/api/: main.py  schemas.py
policy_system/api/routers/: admin.py  auth.py  feedback.py  query.py
policy_system/auth/: dependencies.py  jwt_handler.py  password.py
policy_system/core/: interfaces.py  models.py
policy_system/db/: base.py  models.py  session.py
policy_system/db/migrations/: env.py
policy_system/feedback/: feedback_service.py  flag_service.py
policy_system/ingestion/: chunker.py  pipeline.py
policy_system/ingestion/parsers/: docx_parser.py  pdf_parser.py  text_parser.py
policy_system/llm/: factory.py  ollama_provider.py
policy_system/query/: access_filter.py  citation_builder.py  conversation_service.py  engine.py  prompts.py
policy_system/rag/: chromadb_provider.py  factory.py
policy_system/validation/: runner.py
policy_system/validation/gold_standards/: sample_gold.yaml
scripts/: ingest_policies.py  seed_db.py
tests/: conftest.py  test_admin.py  test_api.py  test_auth.py  test_feedback.py  test_ingestion.py  test_query.py
(+13 files in other folders)
