[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policy-system"
version = "0.1.0"
description = "Role-based AI policy management system with RAG"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    # Auth
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    # Config
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.7.0",
    # Document parsing
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    # Text chunking (standalone, no full LangChain)
    "langchain-text-splitters>=0.3.0",
    # LLM / RAG
    "ollama>=0.4.0",
    "chromadb>=1.0.0",
    # Validation scoring
    "sentence-transformers>=3.0.0",
    # Utilities
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.0.0",
    "kagglehub>=1.0.0",
    "nbconvert>=7.17.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
